# minipix-BBB

./: CLAUDE.md
software/: CMakeLists.txt
software/decoder/: decoder.py
software/decoder/src/: parse_file.py  pixel_decoder.py  tpx3_luts.py
software/dummy/beaglebone/: CMakeLists.txt  compile.sh  init.sh  test.sh
software/dummy/linux/src/: minipix_dummy_linux.cpp
software/example_interface/linux_test/: run_tot_toa.sh
software/example_interface/stm32f411/include/stm_core/: main.h  stm32f4xx_it.h
software/example_interface/stm32f411/src/: main.c
software/example_interface/stm32f411/src/stm_core/: stm32f4xx_hal_msp.c
software/gatherer/src/: main.cpp  main_tot_toa.cpp
software/llcp/include/: llcp.h
software/vzlusat1-timepix-data/data/labelled/above_europe/: 100_fullres.metadata.txt  101_fullres.metadata.txt  102_fullres.metadata.txt  107_fullres.metadata.txt  109_fullres.metadata.txt  10_fullres.metadata.txt  110_fullres.metadata.txt  111_fullres.metadata.txt  112_fullres.metadata.txt  113_fullres.metadata.txt  118_fullres.metadata.txt  119_fullres.metadata.txt  11_fullres.metadata.txt  121_fullres.metadata.txt  126_fullres.metadata.txt  129_fullres.metadata.txt  12_fullres.metadata.txt  133_fullres.metadata.txt  134_fullres.metadata.txt  136_fullres.metadata.txt  138_fullres.metadata.txt  146_fullres.metadata.txt  148_fullres.metadata.txt  150_fullres.metadata.txt  151_fullres.metadata.txt  152_fullres.metadata.txt  153_fullres.metadata.txt  154_fullres.metadata.txt  156_fullres.metadata.txt  158_fullres.metadata.txt  15_fullres.metadata.txt  (+474 more)
(+31702 files in other folders)
